# momo

./: .gitignore  AGENT.md  Cargo.toml  README.md  mcp_servers.json  provider_config.example.json
skills/bun/: skill.md
skills/json_formatter/: SKILL.toml  main.py
skills/text_analyzer/: SKILL.toml  main.py
src/: agent.rs  claude.rs  config.rs  debug_server.rs  main.rs  tui.rs  types.rs
src/graph/: memory.rs  mistakes.rs  mod.rs  queries.rs  schema.rs
src/orchestrator/: learning.rs  mod.rs  planner.rs  skill_factory.rs  spec_extractor.rs  task_queue.rs  types.rs  validator.rs  workers.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  openai_compat.rs
src/skills/: loader.rs  matcher.rs  mod.rs  registry.rs  sandbox.rs
src/tools/: arxiv.rs  browser.rs  calculator.rs  free_apis.rs  mcp_bridge.rs  mcp_client.rs  mod.rs  web_fetch.rs
