[package]
name = "agent-brain"
version = "0.2.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# HTTP client
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# XML parsing (for arXiv)
quick-xml = "0.31"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "1"

# MCP client (JSON-RPC based)
# rmcp = "0.1"  # We'll implement MCP manually for more control

# Browser automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
futures = "0.3"

# WASM sandbox for user skills
wasmtime = "27"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
notify = "7"
lbug = "0.15.2"

[profile.dev]
opt-level = 0
debug = false

[dev-dependencies]
tempfile = "3.27.0"
